[tool.poetry]
name = "sphinx-workspace"
version = "0.1.0"
description = ""
authors = ["aidanCQ <aidan.keay@quantinuum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
furo = "^2024.1.29"
pydata-sphinx-theme = "^0.15.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
